RESOLVED FIXED272427
Supplementable name should not use ASCIILiteralPtrHash
https://bugs.webkit.org/show_bug.cgi?id=272427
Summary Supplementable name should not use ASCIILiteralPtrHash
Ryosuke Niwa
Reported 2024-04-09 17:02:43 PDT
Use regular operator== for supplementable name.
Attachments
Ryosuke Niwa
Comment 1 2024-04-09 17:09:04 PDT
EWS
Comment 2 2024-04-09 21:25:18 PDT
Committed 277286@main (3612b1cc7286): <https://commits.webkit.org/277286@main> Reviewed commits have been landed. Closing PR #27055 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-09 21:27:17 PDT
Note You need to log in before you can comment on or make changes to this bug.