Supplementable name should not use ASCIILiteralPtrHash https://bugs.webkit.org/show_bug.cgi?id=272427

Reviewed by Chris Dumez.

Use the default hash traits.

* Source/WebCore/platform/Supplementable.h:

Canonical link: https://commits.webkit.org/277286@main