Source/WebCore/platform/Supplementable.h
@@ -122,7 +122,7 @@ protected:
 #endif
 
 private:
-    using SupplementMap = HashMap<ASCIILiteral, std::unique_ptr<Supplement<T>>, ASCIILiteralPtrHash>;
+    using SupplementMap = HashMap<ASCIILiteral, std::unique_ptr<Supplement<T>>>;
     SupplementMap m_supplements;
 #if ASSERT_ENABLED
     Ref<Thread> m_thread { Thread::current() };
